Cambio de escenarios

--- a/Partes del Indice/4. Tacticas/4.2 Mantenibilidad.md
+++ b/Partes del Indice/4. Tacticas/4.2 Mantenibilidad.md
@@ -3,11 +3,8 @@
 Al ser una página dedicada a la comunicación entre estudiantes universitarios, según la institución académica se requieren de diferentes cualidades las cuales deberán ser implementadas. Ante esto, resulta vital que se pueda garantizar la mantenibilidad de esta página web. 
 
 __Escenarios__:
-
-UCI1-Integración con Plataformas LMS: La página web puede integrarse con sistemas de gestión educativa que utilice la universidad para visualizar cursos o anuncios de este.
-
-UCI5-Integración con Servicios de la Universidad: La página web se integra con los servicios propios que brinda la misma universidad, tales como calificaciones, anuncios de la propia universidad.
-
+- ESCA-04 --> Sistema de administración y moderación del chat. 
+- ESCI-04 --> Mantenimiento de servicios.
 
 Algunas tácticas elegidas para lograr esta finalidad son las siguientes.
 
