--- a/Partes del Indice/4. Tacticas/4.4 Rendimiento.md
+++ b/Partes del Indice/4. Tacticas/4.4 Rendimiento.md
@@ -2,15 +2,13 @@
 
 El rendimiento resulta vital en la página de chat, ya que el envío de mensajes o las acciones de moderación deben ser realizadas en tiempo real. Esto asegura una experiencia de usuario correcta. Además, los diferentes módulos deben trabajar de forma rápida y eficaz entre sí para contribuir en el correcto funcionamiento de la página.
 
-Para esto, se establencen las medidas de respuesta estimadas:
-
 * Tiempo de carga promedio: 3s
 * Tiempo de respuuesta promedio entre modulos: 180ms
 
 __Escenarios__:  
-UCC1-Mensajería one-to-one: Los usuarios podrán enviar mensajes directos a otros usuarios, independientemente de su rol.  
-UCC2-Mensajería de grupo: Los usuarios podrán crear y unirse a grupos de chat, ya sean por curso, grupo de trabajo, etc.  
-UCI1-Integración con Plataformas LMS: La página web puede integrarse con sistemas de gestión educativa que utilice la universidad para visualizar cursos o anuncios de este. 
+- ESCI-01 --> Operaciones normales
+
+Para esto, se establencen las medidas de respuesta estimadas:
 - **Controlar la Demanda de Recursos**:  
     - *Eficiencia en el uso de recursos*, resulta vital en el gestión de los recursos que se tienen. Para esto debemos de hacer revisiones periódicas del código o de las funcionalidades que se tienen, para poder eliminar u optimizar funciones que demeriten el rendimiento.
     - *Incrementar eficiencia en el uso de recursos*, se debe de optimizar los algoritmos que utilizamos en el proyecto, especialmente en áreas críticas de la página web para garantizar la menor latencia posible en su uso.
