--- a/Partes del Indice/4. Tacticas/4.1 Disponibilidad.md
+++ b/Partes del Indice/4. Tacticas/4.1 Disponibilidad.md
@@ -7,8 +7,9 @@ Se debe asegurar la alta disponibilidad en la plataforma debido a su naturaleza,
 - Downtime anual: 8.8 horas  
 
 __Escenarios__:  
-UCC1-Mensajería one-to-one: Los usuarios podrán enviar mensajes directos a otros usuarios, independientemente de su rol.  
-UCG1-Registro e inicio de sesión con roles definidos: La página web debe permitir el registro e inicio de sesión de usuarios con roles específicos: profesor, alumno y personal administrativo, cada rol tendrá diferentes permisos y funcionalidades.
+- ESCC-03 --> Disponibilidad 24/7
+- ESCG-01 --> Página web con servicio de autenticación y base de datos.
+- ESCA-01 --> Sistema de administración y moderación del chat
 
 ## Detección de Fallas
 - *Monitoreo* constante de la página web para identifación de potenciales fallos antes de originar la inactividad del sistema.
