--- a/Partes del Indice/4. Tacticas/4.3 Interoperabilidad.md
+++ b/Partes del Indice/4. Tacticas/4.3 Interoperabilidad.md
@@ -1,13 +1,11 @@
 # 4.3 Interoperabilidad
 
-La interoperabilidad resulta clave al momento de considerar una página web como ClassRalk. En ella como utilizamos la información base del usuario para casi todas las funcionalidades, como el chato o la moderación, resulta vital el manejo de un bien nivel de interoperabilidad. Para esto se definieron las siguientes tácticas.
+La interoperabilidad resulta clave al momento de considerar una página web como ClassRalk. En ella como utilizamos la información base del usuario para casi todas las funcionalidades, como el chato o la moderación, resulta vital el manejo de un bien nivel de interoperabilidad. 
 
 **Escenarios**  
-UCI1-Integración con Plataformas LMS: La página web puede integrarse con sistemas de gestión educativa que utilice la universidad para visualizar cursos o anuncios de este.
+- ESCI-03 --> Operaciones normales
 
-UCI2-Integración con Google Calendar: La página web se integra con Google Calendar para sincronizar eventos del usuario.
-
-UCI3-Integración con Herramientas de Videoconferencia: La página web se integra con las herramientas de videoconferencia que utilize la universidad para facilitar las reuniones.
+Para esto se definieron las siguientes tácticas.
 
 - *Considerar las APIs previo al desarrollo*, esto a causa que algunas funcionalides no serán implementadas por nosotros, pero sí se usarán. Un ejemplo de esto es la integración con Zoom, en la cual nosotros deberemos de considerar cómo se gestiona su API para no tener problemas con esta.
 - *Conexiones seguras*, inicialmente si bien usaremos una base de datos propia, al momento de crecer, se requerirá de un traslado a servidores provistos por terceros. Para esto debemos utilizar protocolos estándares en la industria para asegurar la correcta transmisión de nuestros datos.
