Cambios en respuestas del 2.2

--- a/Partes del Indice/2. Requerimientos del Sistema/2.2 Requerimentos de Atributos.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.2 Requerimentos de Atributos.md
@@ -4,28 +4,28 @@
 
 | Atributo       | Código  | Entorno                                   | Fuente                                                     | Estímulo                               | Artefacto              | Respuesta                                                                                   | Medida de Respuesta                                                               |
 | -------------- | ------- | ----------------------------------------- | ---------------------------------------------------------- | -------------------------------------- | ---------------------- | ------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------- |
-| Escalabilidad  | ESCC-01 | Crecimiento de la cantidad de estudiantes | Aumento del número de usuarios                             | Aumento del número de mensajes         | Módulo de comunicación | El sistema debe permitir el envío de un alto volumen de mensajes                            | Capacidad máxima de usuarios concurrentes                                         |
-| Usabilidad     | ESCC-02 | Facilidad de uso de la ventana de chat    | Usuarios finales                                           | Interfaz de ventana de chat            | Módulo de comunicación | La inferfaz de chat debe ser fácil de usar para los usuarios finales                        | Evaluaciones de usabilidad                                                        |
+| Escalabilidad  | ESCC-01 | Crecimiento de la cantidad de estudiantes | Aumento del número de usuarios                             | Aumento del número de mensajes         | Módulo de comunicación | El sistema debe permitir el envío de un alto volumen de mensajes                            | 20000 usuarios en simultáneo                                                      |
+| Usabilidad     | ESCC-02 | Facilidad de uso de la ventana de chat    | Usuarios finales                                           | Interfaz de ventana de chat            | Módulo de comunicación | La inferfaz de chat debe ser fácil de usar para los usuarios finales                        | 75% en la escala usabilidad del SUS                                               |
 | Disponibilidad | ESCC-03 | Disponibilidad 24/7                       | Usuarios finales                                           | Acceso a la ventana de chat            | Módulo de comunicación | La ventana de chat debe estar disponible las 24 horas del día, los 7 días de la semana      | Disponibilidad del 99.9%                                                          |
 | Escalabilidad  | ESCC-04 | Ventana de chat                           | Cambios en la forma en cómo se maneja internamente el chat | Introducción de nuevas funcionalidades | Módulo de comunicación | Los usuarios finales reclaman por nuevas funcionalidades las cuales deben ser implementadas | El 90% de los usuarios deben responder de forma alta en encuestas de satisfacción |
 
 ## Módulo de Gestión de Usuarios
 
-| Atributo        | Código  | Entorno         | Fuente          | Estímulo        | Artefacto                             | Respuesta       | Medida de Respuesta |
-| --------------- | ------- | --------------- | --------------- | --------------- | ------------------------------------- | --------------- | ------------------- |
-| Disponibilidad | ESCG-01  | Página web con servicio de autenticación y base de datos. | Equipo de desarrollo | Usuario selecciona opción de registro. | Página de Registro | El usuario se registra con roles definidos. | Usuario puede iniciar sesión con su cuenta.     |
-| Usabilidad | ESCG-02 | Aplicación con interfaz de usuario para perfiles. | Usuarios | Usuario edita su perfil. | Perfil de Usuario | Información de perfil actualizada. | Cambios reflejados en la interfaz de usuario.     |
-| Escalabilidad | ESCG-03 | Sistema de manejo de sesiones en aplicación web. | Administradores, Usuarios | Usuario selecciona 'Olvidé mi contraseña'. | Pantalla de recuperación de contraseña. | Contraseña recuperada. | Usuario puede iniciar sesión con nueva contraseña.     |
-| Seguridad | ESCG-04 | Sistema de registro y base de datos para verificación. | Equipo de desarrollo | Usuario recibe correo de verificación. | Correo electrónico de verificación. | Correo electrónico verificado. | Cuenta activada y verificada.     |
+| Atributo       | Código  | Entorno                                                   | Fuente                    | Estímulo                                   | Artefacto                               | Respuesta                                   | Medida de Respuesta                                                           |
+| -------------- | ------- | --------------------------------------------------------- | ------------------------- | ------------------------------------------ | --------------------------------------- | ------------------------------------------- | ----------------------------------------------------------------------------- |
+| Disponibilidad | ESCG-01 | Página web con servicio de autenticación y base de datos. | Equipo de desarrollo      | Usuario selecciona opción de registro.     | Página de Registro                      | El usuario se registra con roles definidos. | Se pueden loggear 1000 usuarios en simultáneo                                 |
+| Usabilidad     | ESCG-02 | Aplicación con interfaz de usuario para perfiles.         | Usuarios                  | Usuario edita su perfil.                   | Perfil de Usuario                       | Información de perfil actualizada.          | Los cambios demoran 3 segundos en actualizarse                                |
+| Escalabilidad  | ESCG-03 | Sistema de manejo de sesiones en aplicación web.          | Administradores, Usuarios | Usuario selecciona 'Olvidé mi contraseña'. | Pantalla de recuperación de contraseña. | Contraseña recuperada.                      | El cambio de contraseña demora 5 segundos en efectuarse                       |
+| Seguridad      | ESCG-04 | Sistema de registro y base de datos para verificación.    | Equipo de desarrollo      | Usuario recibe correo de verificación.     | Correo electrónico de verificación.     | Correo electrónico verificado.              | El sistema de verificación puede verificar hasta 100 usuarios al mismo tiempo |
 
 ## Módulo de Administración y Moderación
 
 | Atributo       | Código  | Entorno                                                                 | Fuente               | Estímulo                                                                                                                        | Artefacto                                                                                    | Respuesta                                                                                                                           | Medida de Respuesta                                   |
 | -------------- | ------- | ----------------------------------------------------------------------- | -------------------- | ------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------- |
-| Disponibilidad | ESCA-01 | Sistema de administración y moderación del chat                         | Administradores      | Ingreso de usuarios al sistema de administración, solicitudes de moderación de contenido, actualizaciones de estado del sistema | Sistema de administración y moderación del chat                                              | El sistema debe permanecer accesible y funcional para los administradores en todo momento, incluso durante picos de actividad       | Tiempo promedio de inactividad del sistema por día    |
-| Seguridad      | ESCA-02 | Sistema de administración y moderación del chat                         | Administradores      | Intentos de acceso no autorizado, ingreso de solicitudes de moderación, tráfico de red malicioso                                | Sistema de administración y moderación del chat, servidores de aplicaciones                  | El sistema debe proteger los datos confidenciales y garantizar que solo los usuarios autorizados tengan acceso solo a sus funciones | Número de intentos de acceso no autorizado bloqueados |
-| Usabilidad     | ESCA-03 | Interfaz de usuario del sistema de administración y moderación del chat | Administradores      | Interacción de los administradores y moderadores con la interfaz de usuario para realizar tareas de moderación                  | Interfaz de usuario del sistema de administración y moderación del chat                      | El sistema debe proporcionar una interfaz intuitiva y fácil de usar que permita al administrador ser eficiente                      | Encuestas de satisfacción del usuario                 |
-| Mantenibilidad | ESCA-04 | Sistema de administración y moderación del chat.                        | Equipo de desarrollo | Implementación de nuevas características, corrección de errores reportados, actualizaciones de seguridad                        | Código fuente del sistema de administración y moderación del chat, documentación del sistema | El sistema debe ser fácil de mantener y actualizar, que facilite la comprensión y modificación de los desarrolladores               | Número de errores introducidos durante modificaciones |
+| Disponibilidad | ESCA-01 | Sistema de administración y moderación del chat                         | Administradores      | Ingreso de usuarios al sistema de administración, solicitudes de moderación de contenido, actualizaciones de estado del sistema | Sistema de administración y moderación del chat                                              | El sistema debe permanecer accesible y funcional para los administradores en todo momento, incluso durante picos de actividad       | 2 minutos de inactividad diaria    |
+| Seguridad      | ESCA-02 | Sistema de administración y moderación del chat                         | Administradores      | Intentos de acceso no autorizado, ingreso de solicitudes de moderación, tráfico de red malicioso                                | Sistema de administración y moderación del chat, servidores de aplicaciones                  | El sistema debe proteger los datos confidenciales y garantizar que solo los usuarios autorizados tengan acceso solo a sus funciones | 3 intentos de acceso antes de bloquear la cuenta |
+| Usabilidad     | ESCA-03 | Interfaz de usuario del sistema de administración y moderación del chat | Administradores      | Interacción de los administradores y moderadores con la interfaz de usuario para realizar tareas de moderación                  | Interfaz de usuario del sistema de administración y moderación del chat                      | El sistema debe proporcionar una interfaz intuitiva y fácil de usar que permita al administrador ser eficiente                      | 80% de aprobación en encuestas de aprobación de los usuarios                 |
+| Mantenibilidad | ESCA-04 | Sistema de administración y moderación del chat.                        | Equipo de desarrollo | Implementación de nuevas características, corrección de errores reportados, actualizaciones de seguridad                        | Código fuente del sistema de administración y moderación del chat, documentación del sistema | El sistema debe ser fácil de mantener y actualizar, que facilite la comprensión y modificación de los desarrolladores               | 2 errores introducidos durante modificaciones |
 
 ## Módulo de Integraciones de Terceros
 
