Update 1.3 Estructura de Equipo.md

--- a/Partes del Indice/1. Caso de Negocio/1.3 Estructura de Equipo.md
+++ b/Partes del Indice/1. Caso de Negocio/1.3 Estructura de Equipo.md
@@ -1,18 +1,98 @@
 # 1.3 Estructura del Equipo
 En esta sección se presentará el organigrama del la startup y se describirán los roles presentes en la estructura organizativa del equipo.
 
-- CEO: Es la persona que ocupa el puesto más alto en nuestra organización. Se engarga de establecer la visión de la empresa, además de tomar decisiones estratégicas y gestionar las finanzas de la empresa.
-- CTO: Puesto de segundo orden en nuestro organigrama, se encarga de desarollar e implementar la estrategia tecnológica de la startup, además de garantizar que la infraestructura tecnológica sea segura, confiable y escalable.
-- Arquitecto de Software: Profesional altamente especializado en el diseño y planificación de los sistemas del software. Es el responsable de definir la estructura del software, asegurando que el sistema cumpla con los requisitos técnicos, de rendimiento, seguridad y calidad. 
-- Técnico de Despligue: Profesional encargado de de la instalación, configuración y puesta en marcha de sistemas informáticos, redes y otros componentes tecnológicos. Su principal función es garantizar que los sitemas funcionen correctamente y cumplan con los requisitos establecidos.
-- Aseguramiento de Calidad (QA): Profesional responsable de garantizar la calidad del software en todas las etapas del proceso de desarrollo, desde la definición de requisitos hasta la entrega final y el mantenimiento. Su objetivo principal es prevenir errores y defectos en el producto, asegurando que cumpla con los estándares de calidad establecidos.
-- Analistas:  Profesional que se dedica a analizar e interpretar información para obtener conocimiento y resolver problemas. Su trabajo involucra la recopilación, organización, limpieza y análisis de datos de diversas fuentes, utilizando herramientas y métodos estadísticos, matemáticos y de visualización.
-- Diseñador General: Es el encargado del diseño del software como aterrizaje de la arquitectura, de aplicar la arquitectura para cumplir los requerimientos de los módulos o partes a su cargo. Es su trabajo resolver problemas de contención de recursos y establecer presupuestos de consumo de estos. Debe entender cómo sus componentes a cargo interactúan y se comunican con otros.
-- Director de Proyecto: Es el líder responsable de la planificación, ejecución y control de un proyecto para alcanzar sus objetivos de manera eficiente y dentro del presupuesto y el cronograma establecidos.
-- Evaluador:  Es el profesional encargado de evaluar y valorar diferentes aspectos, como programas, proyectos o sistemas. Su objetivo es proporcionar información precisa e imparcial para ayudar a tomar decisiones informadas y mejorar el desempeño en el área evaluada.
-- Integradores:  Profesional altamente calificado que se especializa en integrar diferentes sistemas, componentes o tecnologías para crear una solución completa y funcional. Su objetivo principal es eliminar las barreras entre sistemas dispares y garantizar que todos los componentes funcionen juntos de manera fluida y eficiente.
-- Soporte de TI: Area encargada que brinda asistencia a los usuarios de tecnología, como computadoras, redes, software y dispositivos móviles. Su objetivo principal es resolver problemas técnicos, responder preguntas y brindar orientación a los usuarios para que puedan utilizar la tecnología de manera eficiente y segura.
+# Organigrama
 
-![Estructura del equipo](/PNGs/Organigrama.jpeg)
+![Estructura del equipo](/PNGs/Organigrama_Final.jpeg)
+
+# Gerencia General (CEO): 
+
+Establece la visión de la empresa, toma decisiones estratégicas y gestiona las finanzas de la empresa.
+
+# Gerencia de Tecnología (CTO)
+
+Desarrolla e implementa la estrategia tecnológica, garantiza la seguridad, confiabilidad y escalabilidad de la infraestructura tecnológica.
+
+## Arquitecto de Software
+
+Define la estructura del software, asegurando requisitos técnicos, rendimiento, seguridad y calidad.
+
+## Técnico de Despliegue
+
+Encargado de la instalación, configuración y puesta en marcha de sistemas tecnológicos.
+
+## Aseguramiento de Calidad (QA)
+
+Garantiza la calidad del software en todas las etapas del desarrollo.
+
+## Diseñador General
+
+Aplica la arquitectura del software, resuelve problemas de recursos y establece presupuestos de consumo.
+
+# Gerencia de Operaciones (COO)
+
+Gestiona las operaciones diarias, implementa la estrategia.
+
+## Recursos Humanos (RH)
+
+Encargado del reclutamiento, selección, desarrollo y capacitación del personal.
+
+## Administración
+
+Maneja las finanzas, contabilidad y cumplimiento legal.
+
+### Finanzas y Contabilidad
+
+Gestiona el presupuesto, informes financieros y auditorías.
+
+### Legal y Cumplimiento
+
+Asegura que la empresa cumpla con leyes y regulaciones.
+
+# Gerencia de Marketing (CMO)
+
+Desarrolla y ejecuta estrategias de marketing y relaciones públicas.
+
+## Marketing
+
+Crea campañas y estrategias de marketing digital.
+
+## Ventas
+
+Gestiona el equipo de ventas y soporte al cliente.
+
+### Marketing Digital
+
+Promueve la empresa en plataformas digitales.
+
+### Relaciones Públicas (RRPP)
+
+Gestiona la comunicación y relaciones con el público.
+
+### Soporte al Cliente
+
+Asiste a los usuarios y resuelve problemas técnicos.
+
+# Gerencia de Producto (CPO)
+
+Dirige la estrategia de producto y su ciclo de vida.
+
+## Gestión de Producto
+
+Supervisa la investigación y desarrollo de nuevos productos.
+
+## Investigación y Desarrollo (R&D)
+
+Desarrolla nuevas tecnologías y mejoras en los productos existentes.
+
+## Evaluador
+
+Evalúa programas, proyectos y sistemas para mejorar el desempeño.
+
+## Integradores
+
+Aseguran que diferentes sistemas y tecnologías funcionen juntos eficientemente.
+
+
 
 [Regresar al índice](../../README.md)
