Update 1.4 Listado de Stakeholders.md

--- a/Partes del Indice/1. Caso de Negocio/1.4 Listado de Stakeholders.md
+++ b/Partes del Indice/1. Caso de Negocio/1.4 Listado de Stakeholders.md
@@ -1,19 +1,81 @@
 # 1.4 Stakeholders
-- Analistas: Encargados de analizar la arquitectura y contrastarla con los requerimientos de calidad definidos. De este rol se va a encargar el equipo de desarrollo
-- Arquitecto: Encargados del desarrollo de la arquitectura y su documentación. Se este rol se encargarán los arquitectos de software.
-- Gestor de negocio: Es el responsable de la unidad de negocio que posee le sistema. Tiene responsabilidad ejecutiva y de definición de los procesos del negocio. De este rol se encarga el CEO.
-- Conformance checker: Se asegura del alineamiento a estándares y procesos que provean confianza en la sostenibilidad del producto. De este rol se encargará el asegurador de calidad (QA).
-- Cliente: Aquel que paga por el sistema y representa al usuario final. En este rol se encuentra las instituciones educativas.
-- DBA: Encargado del diseño de la base de datos, el análisis de los datos, modelamiento y administración del software de la BD y sus aspectos de seguridad. En este rol se  encuentra el técnico de despliegue.
-- Especialista en despliegue: Encargado de aceptar el sistema terminado luego del desarrollo y realizar el despligue. Se encarga que el softare esté operativo y cumpla con el objetivo del negocio. De este rol se va a encargar el técnico de despliegue.
-- Diseñador: Diseña el software como aterrizaje de la arquitectura, aplica la arquitectura para cumplir los requerimientos de los  módulos o partes a su cargo. Para este rol se va a encargar el diseñador general.
-- Evaluador: Conduce la evaluación formar de la arquitectura y la documentación en base a algún criterio definido. De este rol se va a encargar el evaluador de producto.
-- Implementador: Son los encargados del desarrollo del sistema en función al diseño, los requerimientos y la arquitectura. De este rol se van a encargar el equipo de desarrollo.
-- Integrador: Son aquellos que tomarán los componentes individuales y se encargarán de integrarlos, en función de la arquitectura y el diseño de los sistemas. De este rol en encargará el equipo de desarrollo.
-- Responsable de mantenimento: Se encargan de arreglar fallos y proveer mejoras al sistema a a lo largo de su ciclo de vida. De este rol se va a encargar el soporte de TI.
-- Administrador de Línea de producto: Encargados del mantenimiento y monitoreo del hardware y software en la red. Puede incluir configuración, mantenimienyo y monitoreo de los elementos de red. De este rol se van a encagar el departamento de innovación.
-- Jefe de proyecto: Encargado de la planificación, programación y asignación de recursos para desarrollar los componentes y liberarlos para pruebas de integración. De este rol se va encargar el director de proyecto.
-- Responsable de pruebas: Es el responsable del manejo de un sistema con el que debermos interactuar. Para este rol se encargará el evaluador de producto y QA.
--  Usuarios finales: Son los usuarios finales que usarán el sistema. En este caso, serán los estudiantes, profesores, jefes de practica y personal administrativo.
+
+## Stakeholders internos
+
+### CEO (Chief Executive Officer)
+- Rol: Máximo responsable de la empresa.
+- Intereses: Éxito y crecimiento de la empresa, retorno de la inversión, cumplimiento de la visión y misión.
+### CTO (Chief Technology Officer)
+- Rol: Responsable de la estrategia tecnológica.
+- Intereses: Innovación tecnológica, seguridad de la infraestructura, escalabilidad y confiabilidad del sistema.
+### COO (Chief Operating Officer)
+- Rol: Gestiona las operaciones diarias.
+- Intereses: Eficiencia operativa, implementación efectiva de la estrategia, cumplimiento de los objetivos operacionales.
+### CMO (Chief Marketing Officer)
+- Rol: Responsable de las estrategias de marketing.
+- Intereses: Aumento de la visibilidad de la marca, crecimiento de la base de usuarios, efectividad de las campañas de marketing.
+### CPO (Chief Product Officer)
+- Rol: Dirige la estrategia de producto.
+- Intereses: Desarrollo de productos innovadores, satisfacción del usuario, mejora continua de los productos.
+### Arquitecto de Software
+- Rol: Diseña y planifica los sistemas de software.
+- Intereses: Eficiencia del diseño, cumplimiento de requisitos técnicos y de calidad, innovación en el desarrollo de software.
+### Técnico de Despliegue
+- Rol: Instalación y configuración de sistemas.
+- Intereses: Correcto funcionamiento de los sistemas, cumplimiento de los requisitos técnicos, minimización de tiempos de inactividad.
+### Aseguramiento de Calidad (QA)
+- Rol: Garantiza la calidad del software.
+- Intereses: Prevención de errores y defectos, cumplimiento de los estándares de calidad, satisfacción del usuario.
+### Diseñador General
+- Rol: Diseña y desarrolla componentes del software.
+- Intereses: Eficiencia y funcionalidad del diseño, optimización del uso de recursos, integración efectiva de componentes.
+### Director de Proyecto
+- Rol: Planificación y control de proyectos.
+- Intereses: Cumplimiento de plazos y presupuestos, éxito de los proyectos, coordinación efectiva del equipo.
+### Analistas
+- Rol: Análisis e interpretación de datos.
+- Intereses: Precisión y utilidad del análisis, apoyo en la toma de decisiones, mejora de procesos y productos.
+### Evaluador
+- Rol: Evaluación y valoración de programas y sistemas.
+- Intereses: Precisión en la evaluación, mejora continua, apoyo en la toma de decisiones.
+### Integradores
+- Rol: Integración de sistemas y tecnologías.
+- Intereses: Fluidez y eficiencia en la integración, minimización de conflictos entre sistemas, funcionamiento óptimo.
+### Soporte de TI
+- Rol: Asistencia técnica a usuarios.
+- Intereses: Resolución rápida y eficiente de problemas, satisfacción del usuario, soporte continuo y fiable.
+
+## Stakeholders externos
+### Estudiantes Universitarios
+- Rol: Usuarios principales del servicio.
+- Intereses: Eficiencia y facilidad de uso del chat, seguridad y privacidad de la información, funcionalidades que mejoren la experiencia educativa.
+### Profesores
+- Rol: Usuarios del servicio.
+- Intereses: Herramientas para facilitar la comunicación y la enseñanza, seguridad y privacidad, integración con otras herramientas educativas.
+### Personal Administrativo
+- Rol: Usuarios del servicio.
+- Intereses: Mejora en la comunicación interna, eficiencia en la gestión de procesos, seguridad y privacidad de la información.
+### Universidades
+- Rol: Instituciones que adoptan el servicio.
+- Intereses: Mejora en la comunicación institucional, satisfacción de estudiantes y personal, integración con sistemas existentes.
+### Inversores
+- Rol: Proveen capital para el crecimiento de la empresa.
+- Intereses: Retorno de la inversión, crecimiento y rentabilidad de la empresa, innovación y competitividad.
+### Proveedores de Tecnología
+- Rol: Proveen infraestructura y servicios tecnológicos.
+- Intereses: Relaciones comerciales estables y duraderas, cumplimiento de contratos, crecimiento del negocio.
+### Gobierno y Reguladores
+- Rol: Entidades que regulan el funcionamiento de la empresa.
+- Intereses: Cumplimiento de leyes y regulaciones, protección de los derechos de los usuarios, contribución al desarrollo tecnológico y educativo.
+### Medios de Comunicación
+- Rol: Informan sobre la empresa y sus actividades.
+- Intereses: Acceso a información relevante y precisa, historias de éxito y desarrollo tecnológico, novedades y avances.
+### Competencia
+- Rol: Otras empresas del sector.
+- Intereses: Benchmarking, innovación y diferenciación, tendencias del mercado.
+### Comunidades y Sociedades Profesionales
+- Rol: Grupos y asociaciones relacionados con la educación y tecnología.
+- Intereses: Colaboración y apoyo en el desarrollo educativo y tecnológico, promoción de buenas prácticas, networking y desarrollo profesional.
+
 
 [Regresar al índice](../../README.md)
