added names in stakeholders

--- a/Partes del Indice/1. Caso de Negocio/1.3 Estructura de Equipo.md
+++ b/Partes del Indice/1. Caso de Negocio/1.3 Estructura de Equipo.md
@@ -1,31 +1,32 @@
 # 1.3 Estructura del Equipo
+
 En esta sección se presentará el organigrama del la startup y se describirán los roles presentes en la estructura organizativa del equipo.
 
 # Organigrama
 
 ![Estructura del equipo](/PNGs/Organigrama_Final.jpeg)
 
-# Gerencia General (CEO): 
+# Gerencia General (CEO)
 
 Establece la visión de la empresa, toma decisiones estratégicas y gestiona las finanzas de la empresa.
 
-# Gerencia de Tecnología (CTO)
+# Gerencia de Tecnología (CTO) - Sebastian Herrera
 
 Desarrolla e implementa la estrategia tecnológica, garantiza la seguridad, confiabilidad y escalabilidad de la infraestructura tecnológica.
 
-## Arquitecto de Software
+## Arquitectos de Software - Grupo 2
 
 Define la estructura del software, asegurando requisitos técnicos, rendimiento, seguridad y calidad.
 
-## Técnico de Despliegue
+## Técnico de Despliegue - Juan Diego Castillo
 
 Encargado de la instalación, configuración y puesta en marcha de sistemas tecnológicos.
 
-## Aseguramiento de Calidad (QA)
+## Aseguramiento de Calidad (QA) - Hector Meneses
 
 Garantiza la calidad del software en todas las etapas del desarrollo.
 
-## Diseñador General
+## Diseñador General - Sergio Flores
 
 Aplica la arquitectura del software, resuelve problemas de recursos y establece presupuestos de consumo.
 
@@ -85,14 +86,12 @@ Supervisa la investigación y desarrollo de nuevos productos.
 
 Desarrolla nuevas tecnologías y mejoras en los productos existentes.
 
-## Evaluador
+## Evaluador - Sergio Flores
 
 Evalúa programas, proyectos y sistemas para mejorar el desempeño.
 
-## Integradores
+## Integradores - Equipo de desarrollo
 
 Aseguran que diferentes sistemas y tecnologías funcionen juntos eficientemente.
-
-
 
 [Regresar al índice](../../README.md)
