--- a/Partes del Indice/6. Workshop de Atributos de Calidad - QAW/00. Stakeholders.md
+++ b/Partes del Indice/6. Workshop de Atributos de Calidad - QAW/00. Stakeholders.md
@@ -1,3 +1,5 @@
+# Stakeholders
+
 | ID     | Nombre              | Cargo                           | Rol (Catálogo)                               | Comentario                                                   |
 | ------ | ------------------- | ------------------------------- | -------------------------------------------- | ------------------------------------------------------------ |
 | STK-01 | Sebastian Herrera   | CTO                             | Gestor de negocio                            | Encargado de la dirección tecnológica y estratégica.         |
