--- a/Partes del Indice/6. Workshop de Atributos de Calidad - QAW/01. Brainstorming.md
+++ b/Partes del Indice/6. Workshop de Atributos de Calidad - QAW/01. Brainstorming.md
@@ -1,3 +1,5 @@
+# Brainstorming
+
 |         | Stakeholder | Atributo de Calidad | Estímulo                                                                         | Respuesta                                          |
 | ------- | ----------- | ------------------- | -------------------------------------------------------------------------------- | -------------------------------------------------- |
 | ESCP-01 | STK-01      | Interoperabilidad   | Sincronizacion de datos entre el sistema y sistemas externos                     | Sincronizacion exitosa                             |
