--- a/Partes del Indice/6. Workshop de Atributos de Calidad - QAW/02. Consolidacion.md
+++ b/Partes del Indice/6. Workshop de Atributos de Calidad - QAW/02. Consolidacion.md
@@ -1,3 +1,5 @@
+# Consolidación
+
 | ID Escenario | Atributo de Calidad | Estímulo                                                                         | Respuesta                                          | ID Escenario Preliminar            | Sustento           |
 | ------------ | ------------------- | -------------------------------------------------------------------------------- | -------------------------------------------------- | ---------------------------------- | ------------------ |
 | ESC-01       | Disponibilidad      | Alta demanda en el sistema                                                       | Operación normal                                   | ESCP-12                            | Demanda alta       |
